--- a/frontend/src/theme/_smui-theme.scss
+++ b/frontend/src/theme/_smui-theme.scss
@@ -32,25 +32,30 @@ a:visited {
   position: fixed;
   width: 13%;
   background-color: color-palette.$grey-300;
+  text-align: center;
 }
 
 #image_container{
   width: 85%;
   float: left;
-  background-color: color-palette.$grey-500;
+  background-color: color-palette.$grey-300;
   margin-left: 15%;
 
 }
 
 .buttons{
-  text-align: left;
+  text-align: center;
+}
+
+.redBorder {
+  border: 4px solid red;
+}
+
+.image_subtitle{
+  text-align: center;
 }
 
 .menu_button { 
   width: 75%;
   margin-bottom: 15px;
-}
-
-.menu_item{
-  margin-left: 15px;
 }
