--- a/frontend/src/theme/_smui-theme.scss
+++ b/frontend/src/theme/_smui-theme.scss
@@ -29,7 +29,7 @@ a:visited {
 }
 
 .menu {
-  position: fixed;
+  position: absolute;
   width: 13%;
   background-color: color-palette.$grey-300;
   text-align: center;
@@ -44,6 +44,7 @@ a:visited {
 }
 
 .buttons{
+  height: 100%;
   text-align: center;
 }
 
@@ -55,7 +56,11 @@ a:visited {
   text-align: center;
 }
 
+.menu_item{
+  width: 90%;
+  margin-bottom: 7.5px;
+}
 .menu_button { 
-  width: 75%;
-  margin-bottom: 15px;
+  font-size: 0.25em;
+  font-weight: 100;
 }
