--- a/frontend/src/theme/_smui-theme.scss
+++ b/frontend/src/theme/_smui-theme.scss
@@ -68,6 +68,7 @@ a:visited {
   margin-bottom: 7.5px;
 }
 .menu_button { 
-  font-size: 0.25em;
-  font-weight: 100;
+  font-size: 0.2em;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
