--- a/frontend/src/theme/_smui-theme.scss
+++ b/frontend/src/theme/_smui-theme.scss
@@ -20,6 +20,9 @@ body {
 }
 
 .transparentBorder{
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   border: 3px solid transparent;
 }
 
@@ -32,20 +35,22 @@ a:visited {
 }
 
 .viewbox{
-  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .menu {
-  float:left;
-  width: 15%;
+  min-width: 200px;
+  flex: 1;
   background-color: color-palette.$grey-300;
   text-align: center;
+  box-sizing: border-box;
 }
 
 #image_container{
-  width: 85%;
-  float: left;
+  flex: 1;
   background-color: color-palette.$grey-300;
+  box-sizing: border-box;
 }
 
 .buttons{
@@ -54,6 +59,9 @@ a:visited {
 }
 
 .redBorder {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   border: 3px solid red;
 }
 
@@ -66,7 +74,6 @@ a:visited {
   margin-bottom: 7.5px;
 }
 .menu_button { 
-  font-size: 0.2em;
   text-overflow: ellipsis;
   overflow: hidden;
 }
