--- a/frontend/src/theme/_smui-theme.scss
+++ b/frontend/src/theme/_smui-theme.scss
@@ -55,7 +55,6 @@ a:visited {
 
 .buttons{
   height: 100%;
-  text-align: center;
 }
 
 .redBorder {
@@ -76,4 +75,7 @@ a:visited {
 .menu_button { 
   text-overflow: ellipsis;
   overflow: hidden;
+  width: 50%;
+  float:left;
+  margin-left: 0.5em;
 }
